examples/test/testpolicy7285.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7285
  namespace: namespace418
spec:
  podSelector:
    matchLabels:
      key12: value15
      key14: value42
      key39: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value21
      podSelector:
        matchLabels:
          key9: value3
          key8: value49
          key3: value21
